adicionei um paragrafo

--- a/Site exemplo/index.html
+++ b/Site exemplo/index.html
@@ -9,5 +9,6 @@
    <h1>Olá, Mundo!</h1> 
    <hr>
    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore nihil voluptatibus delectus saepe voluptates non magnam eveniet, voluptas nisi provident rerum officia tenetur et quas vitae atque aut cupiditate? Quod.</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa ipsa temporibus sapiente molestias autem accusamus et rerum, ipsam laudantium, voluptatem, laborum neque iusto necessitatibus? Corrupti voluptas suscipit explicabo nisi minus!</p>
 </body>
 </html>
